--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,9 +18,9 @@
         </li>
 {% for link in site.links %}
             <li>{% if link.external %}
-            <a href="{{ link.url }}">{{ link.title[page.lang] }}</a>
+            <a href="{{ link.url }}">{{ link.title }}</a>
             {% else %}
-            <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title[page.lang] }}</a>
+            <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
             {% endif %} </li>
 {% endfor %}            
            <li><a href="{{ site.baseurl }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
