--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,12 +23,13 @@
             <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
             {% endif %} </li>
 	    {% endfor %}
+	    <li>lang</li>
   {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
   {% for post in posts %} <li><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></li> {% endfor %}
 
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
   {% for page in pages %} <li><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></li> {% endfor %}
-	    
+	    <li>end lang</li>
     </ul>
     <ul>
       <li>de</li>
