--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,25 +16,17 @@
         <li class="notepad-mobile-close-btn show-for-small text-right">
             <a href="#"><i class="fa fa-times"></i></a>
         </li>
-{% for link in site.links %}
-            <li>{% if link.external %}
-            <a href="{{ link.url }}">{{ link.title }}</a>
-            {% else %}
+{% for link in site.links[page.lang] %}
+            <li>
             <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
-            {% endif %} </li>
+            </li>
 	    {% endfor %}
-	    <li>lang</li>
   {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-  {% for post in posts %} <li><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></li> {% endfor %}
+  {% for post in posts %} <li><i><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
 
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-  {% for page in pages %} <li><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></li> {% endfor %}
-	    <li>end lang</li>
+  {% for page in pages %} <li><i><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
     </ul>
-    <ul>
-      <li>de</li>
-      <li>en</li>
-      </ul>
 </div>
         <div class="clearfix"></div>
     </div>
