--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>site.title[page.lang]</title>
+<title>{{ site.title[page.lang] }}</title>
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description[page.lang] }}{% endif %}">
 
 <link href="{{ site.baseurl }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title[page.lang] }} Feed">
