--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,9 +31,15 @@
         </li>
 {% for link in site.links[page.lang] %}
             <li>
-                    <a href="{{ site.baseurl }}{{ link[1].url }}">{{ link[1].title }}</a>
+            <a href="{{ site.baseurl }}{{ link[1].url }}">{{ link[1].title }}</a>
             </li>
-{% endfor %}            
+	    {% endfor %}
+  {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+  {% for post in posts %} <li><i><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
+
+  {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+  {% for page in pages %} <li><i><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
+
     </ul>
 
 </div>
