--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,16 +25,19 @@
         <li class="notepad-mobile-close-btn show-for-small text-right">
             <a href="#"><i class="fa fa-times"></i></a>
         </li>
-{% for link in site.links %}
-            <li>{% if link.external %}
-                    <a href="{{ link.url }}">{{ link.title }}</a>
-                {% else %}
-                    <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
-                {% endif %} </li>
-{% endfor %}            
-           <li><a href="{{ site.baseurl }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
+	{% for link in site.links[page.lang] %}
+        <li>
+          <a href="{{ site.baseurl }}{{ link[1].url }}">{{ link[1].title }}</a>
+        </li>
+	{% endfor %}
+
+	{% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+	{% for post in posts %} <li><i><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
+
+	{% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+	{% for page in pages %} <li><i><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
     </ul>
-</div>
+       </div>
             </div>
             <div class="notepad-page-title row">
                 <div class="small-12 columns">
