--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,11 +21,8 @@
             <a href="{{ site.baseurl }}{{ link[1].url }}">{{ link[1].title }}</a>
             </li>
 	    {% endfor %}
-  {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-  {% for post in posts %} <li><i><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
-
-  {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-  {% for page in pages %} <li><i><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
+	<li><i><a href="{{ site.baseurl }}start.html">de</a></i></li>
+	<li><i><a href="{{ site.baseurl }}">en</a></i></li>
     </ul>
 </div>
         <div class="clearfix"></div>
