Blog logo modified

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,8 +160,8 @@ main, .notepad-share-icons, .notepad-disqus {
 .notepad-site-head .notepad-site-head-content {
   width: 100%;
   text-align: center;
-  background-color: black;
-  background-size: cover; }
+  background: black url(/latinamerica.bike/images/header1.JPG) no-repeat center center;
+}
   .notepad-site-head .notepad-site-head-content.with-bg-cover {
     background-color: rgba(0, 0, 0, 0.7); }
   .notepad-site-head .notepad-site-head-content .notepad-site-head-title-bg {
