--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <link rel="canonical" href="{{ canonical }}">
 
-<link href="{{ site.baseurl }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title[page.lang] }} Feed">
+<link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title[page.lang] }} Feed">
 
 
 <!-- http://t.co/dKP3o1e -->
@@ -36,12 +36,12 @@
 
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/vendor/font-awesome.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/vendor/normalize.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/vendor/nprogress.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/vendor/foundation.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/post.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/normalize.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/nprogress.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/foundation.min.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
 
 
 
