--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,14 +1,14 @@
         <div class="row text-center">
             <section class="notepad-post-share">
-                <a href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.baseurl }}{{ page.url }}%20via%20&#64;{{ site.owner.twitter }}"
+                <a href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.url }}/{{ page.url }}%20via%20&#64;{{ site.owner.twitter }}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;" title="Share on Twitter">
                     <i>T</i>
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.baseurl }}{{ page.url }}"
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}/{{ page.url }}"
                     onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="Share on Facebook">
                     <i>F</i>
                 </a>
-                <a href="https://plus.google.com/share?url={{ site.baseurl }}{{ page.url }}"
+                <a href="https://plus.google.com/share?url={{ site.url }}/{{ page.url }}"
                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;" title="Share on Google+">
                     <i>G</i>
                 </a>
