--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -3,7 +3,7 @@
                 <div class="row">
                     <section class="notepad-post-author small-12 columns">
                         
-                            <img src="{{site.baseurl}}/images/{{ author.avatar }}" class="notepad-post-author-avatar" alt="{{ author.display_name }}'s photo">
+                            <img src="{{site.url}}/images/{{ author.avatar }}" class="notepad-post-author-avatar" alt="{{ author.display_name }}'s photo">
                         
                         
                             <span class="author-label">Author</span>
