--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,15 +21,15 @@
         </li>
 	{% for link in site.links[page.lang] %}
         <li>
-          <a href="{{ site.baseurl }}{{ link[1].url }}">{{ link[1].title }}</a>
+          <a href="{{ site.url }}/{{ link[1].url }}">{{ link[1].title }}</a>
         </li>
 	{% endfor %}
 
 	{% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-	{% for post in posts %} <li><i><a href="{{ post.url | prepend: site.baseurl }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
+	{% for post in posts %} <li><i><a href="{{ site.url }}/{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a></i></li> {% endfor %}
 
 	{% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-	{% for page in pages %} <li><i><a href="{{ page.url | prepend: site.baseurl }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
+	{% for page in pages %} <li><i><a href="{{ site.url }}/{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a></i></li> {% endfor %}
     </ul>
        </div>
             </div>
