--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
             </li>
 	    {% endfor %}
 	<li><i><a href="{{ site.url }}/index.html">de</a></i></li>
-	<li><i><a href="{{ site.url }}/index-en.htmlo">en</a></i></li>
+	<li><i><a href="{{ site.url }}/index-en.html">en</a></i></li>
     </ul>
 </div>
         <div class="clearfix"></div>
