--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <link rel="canonical" href="{{ canonical }}">
 
-<link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title[page.lang] }} Feed">
+<link href="{{ site.url }}/feed-{{ page.lang }}.xml" type="application/atom+xml" rel="alternate" title="{{ site.title[page.lang] }} Feed">
 
 
 <!-- http://t.co/dKP3o1e -->
