--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@
 {% include signoff.html %} 
         
         <div class="cf"></div>
-        {% if site.disqus_shortname and page.comments == true %}
+        {% if page.comments == true %}
         <section class="notepad-disqus row">
     <div class="small-12 columns">
         <h1 class="notepad-comments-header">Comments</h1>
