--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -7,7 +7,7 @@ var disqus_config = function () {
 
 (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = '//channel-latinamericabike.disqus.com/embed.js';
+    s.src = '//reiselangsam.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
 })();
