--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,7 +78,7 @@
         {% if page.comments == true %}
         <section class="notepad-disqus row">
     <div class="small-12 columns">
-        <h1 class="notepad-comments-header">{{ commentstitle[page.lang] }}</h1>
+        <h1 class="notepad-comments-header">{{ site.commentstitle[page.lang] }}</h1>
         <div id="disqus_thread"></div>
         {% include disqus_comments.html %}
     </div>
