--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -6,7 +6,7 @@
                             <img src="{{site.url}}/images/{{ author.avatar }}" class="notepad-post-author-avatar" alt="{{ author.display_name }}'s photo">
                         
                         
-                            <span class="author-label">Author</span>
+                            <span class="author-label">{{ site.textauthor[page.lang] }}</span>
                             <h1>{{ author.display_name }}</h1>
                         
                         
