--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,8 @@ main, .notepad-share-icons, .notepad-disqus {
       display: block;
       margin: 0;
       width: 100%;
-      font-size: 2.25rem;
+      font-size: 1.2rem;
+      line-height: 1rem;
       text-align: center;
       padding: 0.3125rem; }
       .notepad-blog-menu ul li a {
