Neu programmierte Galerie

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,4 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css">
 
 
-
+    <link rel="stylesheet" href="{{ site.baseurl }}/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
