--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -14,4 +14,13 @@
     <script type='text/javascript'>console.log("HMFaysal Notepad Theme Version 2.0");</script>
     <script type='text/javascript'>console.log("https://alum.mit.edu/www/hmfaysal");</script>
 
+    <script type="text/javascript" src="{{ site.url }}/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+    <script type="text/javascript">
+	$(document).ready(function() {
+		$(".fancybox").fancybox();
+	});
+    </script>
+
 <script>NProgress.start();var interval=setInterval(function(){NProgress.inc()},1000);jQuery(window).load(function(){clearInterval(interval);NProgress.done()});jQuery(window).unload(function(){NProgress.start()});</script>
+
