Andere Methode für Hintergrundbildgroesse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,7 @@ main, .notepad-share-icons, .notepad-disqus {
   width: 100%;
   text-align: center;
   background: black url(/images/header2.jpg) no-repeat center center;
+  background-size: cover;
 }
   .notepad-site-head .notepad-site-head-content.with-bg-cover {
     background-color: rgba(0, 0, 0, 0.7); }
