--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -81,7 +81,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       display: block;
       min-width: 100%;
       min-height: 100%;
-      max-width: none; }
+      }
   .post-template .notepad-post-title {
     z-index: 1000;
     margin: 0 auto;
