--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1108,7 +1108,8 @@ ul.gallerygrid li {
 ul.gallerygrid li img {
     max-width: 100%;
     height: auto;
-    margin: 0 0 10px;
+    margin: auto;
+    display: block;
 }
 
 ul.gallerygrid li div {
