Small design fix

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -636,3 +636,14 @@ iframe {
     vertical-align: super;
     color: black;
 }
+
+.notepad-page-content iframe {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.notepad-page-content table {
+    margin-left: auto;
+    margin-right: auto;
+}
